# musicplatform

./: .gitignore  pyproject.toml
albums/: admin.py  forms.py  models.py  serializers.py  views.py
albums/migrations/: 0001_initial.py
artists/: admin.py  forms.py  models.py  serializers.py  views.py
artists/migrations/: 0001_initial.py
authentication/: serializers.py  urls.py  views.py
musicplatform/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
