[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = "A music platform for artists to publish their albums."
authors = ["AmmarDab3an"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
